# dsv4-cc-proxy

./: .coverage  .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/: 00-deepseek-api-research.md
.planning/phases/01-foundation-config/: 01-01-PLAN.md  01-01-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-request-translation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PATTERNS.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  (+1 more)
docs/dev/: RELEASE.md  codex-integration.md
docs/promotional/: claude-code-codex-collaboration.md  hackernews.md  juejin.md
dsv4_cc_proxy/: __main__.py  proxy.py
dsv4_cc_proxy/codex/: __init__.py  config.py  models.py  sse.py  tools.py  translate.py
promotional/: csdn.md  hackernews.md  reddit.md  v2ex.md
proxy/: .gitignore  deepseek-thinking-proxy.md  deepseek-thinking-proxy.py  requirements.txt  test_proxy.py
scripts/: com.deepseek.thinking-proxy.plist  coverage-badge.py  install_macos.sh  install_windows_service.ps1  start.bat  start.ps1
tests/: conftest.py  test_codex.py  test_e2e.py  test_main.py  test_models.py  test_proxy.py  test_responses.py  test_sse.py  test_tools.py  test_translate.py
(+44 files in other folders)
